@@ -1,4 +1,5 @@
 [CW5]
+* ResetGlobalProperties dialog for v1 protocol: hide and don't send VR help title and VR help item properties.
 * AlertManeuver message: an array of TTS Chunks can be sent now.
 + Play the realtime audio coming with OnAudioPassThru notifications.
 * SyncProxyAndroid SDK: fix getting bulk data from incoming messages.
